--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ html {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
-    border: 1px solid red;
     flex: 1 0 auto;
     display: flex;
     justify-content: center;
@@ -62,13 +61,13 @@ html {
   .panel > *:first-child {
       transform: translateY(-100%);
   }
-  .panel.open.active > *:first-child {
+  .panel.open-active > *:first-child {
       transform: translateY(0);
   }
   .panel > *:last-child {
       transform: translateY(100%);
   }
-  .panel.open.active > *:last-child {
+  .panel.open-active > *:last-child {
       transform: translateY(0);
   }
   .panel p {
